[package]
name = "chowkidar2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

# Shuttle Deployment
shuttle-serenity = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-poise = "0.36.0"
shuttle-secrets = "0.36.0"

# Discord API and Bot 
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
poise = "0.5.7"

# HTTP Client Builders
hyper = "1.0.1"
hyper-rustls = "0.24.2"

serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "full", "macros"] }
csv = "1.3.0"
chrono = "0.4.31"
chrono-tz = "0.8.4"
clokwerk = "0.3"
cronjob = "0.4.17"

